resubmission fixed console errors, overflow, created css folder & footer

--- a/client/src/main css/App.css
+++ b/client/src/main css/App.css
@@ -7,6 +7,7 @@
 .App {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 /* HEADER */
@@ -27,7 +28,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 1vh;
+  padding: .5em;
   background: linear-gradient(
     90deg,
     rgba(255, 163, 0, 1) 0%,
@@ -50,9 +51,9 @@ header {
   font-style: italic;
   text-shadow: 2px 1px #00d4ff;
   text-align: left;
-  padding-left: 10vw;
-  padding-top: 5vh;
-  font-size: 5vh;
+  padding-left: 5em;
+  padding-top: 1em;
+  font-size: 3em;
 }
 
 #mainTitle {
@@ -61,24 +62,24 @@ header {
   font-style: italic;
   text-shadow: 2px 1px #b700ff;
   text-align: right;
-  padding-right: 10vw;
-  padding-top: 0.5vh;
-  font-size: 5vh;
+  padding-right: 5em;
+  padding-top: 0.2em;
+  font-size: 3em;
 }
 
 #mainDesc {
   color: #000000;
   font-family: "Bebas Neue", cursive;
   text-align: right;
-  padding-right: 10vw;
-  padding-top: 1vh;
-  font-size: 3vh;
+  padding-right: 5em;
+  padding-top: 0.2em;
+  font-size: 1em;
 }
 
 #head-img {
-  height: 60vh;
-  width: 20vw;
-  margin-left: 40vw;
+  height: 38em;
+  width: 25em;
+  margin-left: 45em;
 }
 
 /* ANIMATED MOUSE ICON */
@@ -163,10 +164,10 @@ header {
 }
 
 .body-titles {
-  font-size: 10vh;
-  margin-left: 2vw;
+  font-size: 7em;
+  margin-left: .3em;
   text-decoration: underline;
-  padding: 3vh;
+  padding: .2em;
 }
 
 /* PROJECT SECTION */
@@ -176,23 +177,25 @@ header {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   justify-content: space-evenly;
+  overflow-y: scroll;
 }
 
 .project-titles {
-  font-size: 5vh;
-  margin-left: 1vw;
-  margin-top: 4vh;
+  font-size: 3em;
+  margin-left: 1em;
+  margin-top: 1em;
   text-decoration: underline;
   font-family: "Bebas Neue", cursive;
 }
 
 .project-desc {
-  margin-top: 1vh;
-  margin-right: 2vw;
+  margin-top: 1em;
+  margin-right: 2em;
   background-color: white;
   border: solid black;
-  border-radius: 3vh;
-  padding: 1vh;
+  border-radius: 1em;
+  padding: .5em;
+  overflow-y: scroll;
 }
 
 .project-sc {
@@ -235,6 +238,7 @@ header {
     rgba(6, 0, 66, 1) 100%
   );
   transition: transform 0.5s;
+  overflow-y: scroll;
 }
 
 #project-one:hover {
@@ -258,6 +262,7 @@ header {
     rgba(6, 0, 66, 1) 100%
   );
   transition: transform 0.5s;
+  overflow-y: scroll;
 }
 
 #project-two:hover {
@@ -282,6 +287,7 @@ header {
     rgba(6, 0, 66, 1) 100%
   );
   transition: transform 0.5s;
+  overflow-y: scroll;
 }
 
 #project-three:hover {
@@ -309,6 +315,7 @@ header {
     rgba(6, 0, 66, 1) 100%
   );
   transition: transform 0.5s;
+  overflow-y: scroll;
 }
 
 #personal-github:hover {
@@ -386,6 +393,8 @@ header {
   margin-left: 2vw;
   margin-right: 2vw;
   transition: transform 0.5s;
+  width: 17vw;
+  overflow-y: scroll;
 }
 
 .work-desc:hover {
@@ -432,6 +441,7 @@ header {
     rgba(0, 123, 255, 1) 100%
   );
   transition: transform 0.5s;
+  overflow-y: scroll;
 }
 
 #about-one:hover {
@@ -445,6 +455,8 @@ header {
   margin: 1vh;
   margin-top: 3vh;
   padding: 1vh;
+  height: 27vh;
+  overflow-y: scroll;
 }
 
 #about-two {
@@ -461,6 +473,7 @@ header {
     rgba(0, 123, 255, 1) 100%
   );
   transition: transform 0.5s;
+  overflow-y: scroll;
 }
 
 #about-two:hover {
@@ -474,6 +487,8 @@ header {
   margin: 1vh;
   margin-top: 10vh;
   padding: 1vh;
+  height: 10vh;
+  overflow-y: scroll;
 }
 
 /* CONTACT FORM */
